get author articles implementation
